# nash

./: .gitignore  CMakeLists.txt  README.md  command.h  main.c  tokenize.c  tokenize.h
include/: alias.h  builtin.h  command.h  execute.h  expansion.h  input.h  program_vars.h  smart_string.h  subshell.h  tokenize.h  variables.h
src/: alias.c  builtin.c  command.c  execute.c  expansion.c  input.c  program_vars.c  smart_string.c  subshell.c  tokenize.c  variables.c
